<resources>
    <string name="app_name">CommonModal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotmessage">Forgot your login details? Get help signing in.</string>
    <string name="or">or</string>
    <string name="signupmessage">Don\'t have an account? Sign up.</string>
</resources>
